2003-03-06  Christopher January  <chris@atomice.net>

	* include/winbase.h (FindFirstVolume): Add declaration.
	(FindNextVolume): Add declaration.
	(FindVolumeClose): Add declaration.
	(GetSystemTimes): Add declaration.
	* include/winnt.h: Add define for PF_XMMI64_INSTRUCTIONS_AVAILABLE.

2003-03-06  Danny Smith  <dannysmith@users.sourceforge.net>

	*lib/kernel32.def (GetSystemTimes): Add stub.

2003-03-04  Heiko Gerdau  <hg@technosis.de>

	* oleidl.h (IOleObject): Correct GetUserType prototype.
	(IViewObject2): Correct GetExtent prototype.
	* olectl.h (DISPIP_): Add new defines
	* ocidl.h (IOleInPlaceSiteWindowless): Add new interface.

2003-03-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/olectl.h (OleLoadPictureEx) Add prototype.
	(OleLoadPictureFile): Ditto.
	(OleLoadPictureFileEx): Ditto.
	(OleLoadPicturePath): Ditto.
	(OleSavePictureFile): Ditto.

2003-03-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/objbase.h (CoAddRefServerProcess): Add prototype.
	(CoAddReleaseServerProcess): Ditto.
	(CoResumeClassObjects): Ditto.
	(CoSuspendClassObjects): Ditto.
	* include/oleauto.h (V_I1): Define.
	Thanks to: "Timofei"  <mmttmm@users.sourceforge.net>

2003-03-01  Heiko Gerdau  <hg@technosis.de> 

	* include/oleidl.h (USERCLASSTYPE): Add enum.
	* include/ocidl.h (IObjectWithSite): Add interface.

2003-02-28  Roland Schwingel  <roland.schwingel@onevision.de>

	Fixup UNICODE thinko in 2003-02-22 patch.
	* include/wingdi.h (AddFontMemResourceEx): Add.
	(RemoveFontMemResourceEx): Ditto.
	(AddFontMemResourceEx[AW]): Remove.
	(RemoveFontMemResourceEx[AW]): Ditto
	* lib/gdi32.def: (AddFontResourceEx): Add.
	(RemoveFontMemResourceEx): Ditto.
	(AddFontMemResourceEx[AW]): Remove.
	(RemoveFontResourceEx[AW]): Ditto.

2003-02-23  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (EVENTLOG_SUCCESS): Add define.
	Thanks to: Thomas Weber  <thomasweber@sourceforge.net>

2003-02-22  Roland Schwingel  <roland.schwingel@onevision.de>
