@@ -1,0 +1,8 @@
+LIBRARY "RASDLG.DLL"
+EXPORTS
+RasDialDlgA@16
+RasDialDlgW@16
+RasEntryDlgA@12
+RasEntryDlgW@12
+RasPhonebookDlgA@12
+RasPhonebookDlgW@12
