@@ -1,3 +1,9 @@
+2003-03-10  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/rasdlg.h: New file.
+	* lib/rasdlg.def: New file.
+	* lib/test.c: Include rasdlg.h.
+
 2003-03-06  Christopher January  <chris@atomice.net>
 
 	* include/winbase.h (FindFirstVolume): Add declaration.
